--- a/index.html
+++ b/index.html
@@ -53,7 +53,20 @@
         </div>
 
         <div class="menu">
-            
+            <div class="menu__logo"></div>
+            <div class="menu__slogon">    
+                Профессиональное радиооборудование: <br> радиостанции, блоки питания, гарнитуры
+            </div>
+            <div class="menu__box">
+                <ul class="menu__list">
+                    <li class="menu__bottun"><a class="menu__a">Магазин</a></li>
+                    <li class="menu__bottun"><a class="menu__a">Каталог</a></li>
+                    <li class="menu__bottun"><a class="menu__a">Где купить</a></li>
+                    <li class="menu__bottun"><a class="menu__a">Дилерам</a></li>
+                    <li class="menu__bottun"><a class="menu__a">Новости</a></li>
+                    <li class="menu__bottun"><a class="menu__a">Контакты</a></li>
+                </ul>
+            </div>        
         </div>
     </header>
 
