--- a/index.html
+++ b/index.html
@@ -59,19 +59,37 @@
             </div>
             <div class="menu__box">
                 <ul class="menu__list">
-                    <li class="menu__bottun"><a class="menu__a">Магазин</a></li>
-                    <li class="menu__bottun"><a class="menu__a">Каталог</a></li>
-                    <li class="menu__bottun"><a class="menu__a">Где купить</a></li>
-                    <li class="menu__bottun"><a class="menu__a">Дилерам</a></li>
-                    <li class="menu__bottun"><a class="menu__a">Новости</a></li>
-                    <li class="menu__bottun"><a class="menu__a">Контакты</a></li>
+                    <li class="menu__bottun"><a href="index.html" class="menu__a">Магазин</a></li>
+                    <li class="menu__bottun"><a href="index.html" class="menu__a">Каталог</a></li>
+                    <li class="menu__bottun"><a href="index.html" class="menu__a">Где купить</a></li>
+                    <li class="menu__bottun"><a href="index.html" class="menu__a">Дилерам</a></li>
+                    <li class="menu__bottun"><a href="index.html" class="menu__a">Новости</a></li>
+                    <li class="menu__bottun"><a href="index.html" class="menu__a">Контакты</a></li>
                 </ul>
             </div>        
         </div>
     </header>
 
     <main>
-        
+        <div class = "main">
+            <div class = "main__content">
+                <h2>НАША КОМПАНИЯ "ТЕРЕК"</h2>
+                <h3>Мы производим отличную радиотехнику</h3>
+                <p>Компания "Терек " производит сертифицированные радиостанции и аксессуары, разработанные с учетом российских условий  
+                    и законодательства.  Основной приоритет - это уникальная дальность связи и надежность оборудования.</p>
+                <h4>Радиостанциям  "Терек"  доверяют:</h4> 
+                <ul>
+                    <li>группа компаний Легис (ЧОП Легис); </li>
+                    <li>ООО "Тепличный комплекс "Зеленая линия";</li>
+                    <li>предприятия нефтяной и газовой промышленности.</li>
+                    <li>спасательная  служба горнолыжного курорта "Горки город" (Красная поляна);</li>
+                    <li>служба безопасности ОАО "Сочи Парк"; </li>
+                </ul>   
+            </div>
+            <div class = "main__photo">
+                <img  src="./img/IMG_1935__1__1_midi.jpg" class = "main__photoRadio">
+            </div>
+        </div>    
     </main>
     <footer></footer>
 </body>
