--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <div class="menu">
             <div class="menu__logo"></div>
-            <div class="menu__slogon">    
+            <div class="menu__slogon">
                 Профессиональное радиооборудование: <br> радиостанции, блоки питания, гарнитуры
             </div>
             <div class="menu__box">
@@ -66,30 +66,44 @@
                     <li class="menu__bottun"><a href="index.html" class="menu__a">Новости</a></li>
                     <li class="menu__bottun"><a href="index.html" class="menu__a">Контакты</a></li>
                 </ul>
-            </div>        
+            </div>
         </div>
     </header>
 
     <main>
-        <div class = "main">
-            <div class = "main__content">
-                <h2>НАША КОМПАНИЯ "ТЕРЕК"</h2>
-                <h3>Мы производим отличную радиотехнику</h3>
-                <p>Компания "Терек " производит сертифицированные радиостанции и аксессуары, разработанные с учетом российских условий  
-                    и законодательства.  Основной приоритет - это уникальная дальность связи и надежность оборудования.</p>
-                <h4>Радиостанциям  "Терек"  доверяют:</h4> 
-                <ul>
-                    <li>группа компаний Легис (ЧОП Легис); </li>
-                    <li>ООО "Тепличный комплекс "Зеленая линия";</li>
-                    <li>предприятия нефтяной и газовой промышленности.</li>
-                    <li>спасательная  служба горнолыжного курорта "Горки город" (Красная поляна);</li>
-                    <li>служба безопасности ОАО "Сочи Парк"; </li>
-                </ul>   
+        <section class="main">
+            <div class="main__wraper main__content">
+                <h2 class="main__text main__text-h2">НАША КОМПАНИЯ "ТЕРЕК"</h2>
+                <div class="main__text main__text-h3">Мы производим отличную <br>
+                    радиотехнику</div>
+                <p class="main__text main__text-p">Компания "Терек " производит сертифицированные радиостанции и
+                    аксессуары, разработанные с учетом
+                    российских условий
+                    и законодательства. Основной приоритет - это уникальная дальность связи и надежность оборудования.
+                </p>
+                <span class="main__text-span">Радиостанциям "Терек" доверяют:</span>
+                <div class="main__list">
+                    <div class="main__wraper-ul">
+                        <ul class="main__ul">
+                            <li class="main__li">группа компаний Легис (ЧОП Легис); </li>
+                            <li class="main__li">ООО "Тепличный комплекс "Зеленая линия";</li>
+                            <li class="main__li">предприятия нефтяной и газовой промышленности.</li>
+                        </ul>
+                    </div>
+                    <div class="main__wraper-ul">
+                        <ul class="main__ul">
+                            <li class="main__li">спасательная служба горнолыжного курорта "Горки город" (Красная поляна);</li>
+                            <li class="main__li">служба безопасности ОАО "Сочи Парк"; </li>
+                        </ul>
+                    </div>
+
+                </div>
+
             </div>
-            <div class = "main__photo">
-                <img  src="./img/IMG_1935__1__1_midi.jpg" class = "main__photoRadio">
+            <div class="main__wraper">
+                <img src="./img/IMG_1935__1__1_midi.jpg" class="main__photoRadio">
             </div>
-        </div>    
+        </section>
     </main>
     <footer></footer>
 </body>
