Добавил селектор с товаром

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                 <img src="./img/IMG_1935__1__1_midi.jpg" class="main__photoRadio">
             </div>
         </section>
+        <section class="product">
+
+        </section>
     </main>
     <footer></footer>
 </body>
