--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                     </div>
                     <div class="main__wraper-ul">
                         <ul class="main__ul">
-                            <li class="main__li">спасательная служба горнолыжного курорта "Горки город" (Красная поляна);</li>
+                            <li class="main__li">спасательная служба горнолыжного курорта "Горки город" (Красная
+                                поляна);</li>
                             <li class="main__li">служба безопасности ОАО "Сочи Парк"; </li>
                         </ul>
                     </div>
@@ -105,6 +106,30 @@
             </div>
         </section>
         <section class="product">
+            <div class="product_container">
+                <h2 class="product_text-h2">КАКИЕ РАЦИИ МЫ СОЗДАЕМ</h2>
+                <div class="product_line"></div>
+                <div class="product__box-wraper">
+                    <div class="product__box">
+                        <a class="product__a">
+                            <img src="./img/IMG_1924_diagonal_1_midi.jpg" class="product__a">
+                        </a>
+                        <div></div>
+                    </div>
+                    <div class="product__box">
+                        <a class="product__a">
+                            <img src="./img/IMG_1951_diagonal_midi.jpg" class="product__a">
+                        </a>
+                        <div></div>
+                    </div>
+                    <div class="product__box">
+                        <a class="product__a">
+                            <img src="img/IMG_1940_diagonal_1_4_midi.jpg" class="product__a">
+                        </a>
+                        <div></div>
+                    </div>
+                </div>
+            </div>
 
         </section>
     </main>
