Правки списка товаров

--- a/index.html
+++ b/index.html
@@ -107,25 +107,22 @@
         </section>
         <section class="product">
             <div class="product_container">
-                <h2 class="product_text-h2">КАКИЕ РАЦИИ МЫ СОЗДАЕМ</h2>
+                <h2 class="product_text-h2">Какие рации мы создаем</h2>
                 <div class="product_line"></div>
                 <div class="product__box-wraper">
                     <div class="product__box">
-                        <a class="product__a">
-                            <img src="./img/IMG_1924_diagonal_1_midi.jpg" class="product__a">
-                        </a>
+                        <img src="./img/IMG_1924_diagonal_1_midi.jpg" class="product__img">
+                        <a class="product__a"></a> 
                         <div></div>
                     </div>
                     <div class="product__box">
-                        <a class="product__a">
-                            <img src="./img/IMG_1951_diagonal_midi.jpg" class="product__a">
-                        </a>
+                        <img src="./img/IMG_1951_diagonal_midi.jpg" class="product__img"> 
+                        <a class="product__a"></a>                       
                         <div></div>
                     </div>
                     <div class="product__box">
-                        <a class="product__a">
-                            <img src="img/IMG_1940_diagonal_1_4_midi.jpg" class="product__a">
-                        </a>
+                        <img src="img/IMG_1940_diagonal_1_4_midi.jpg" class="product__img">
+                        <a class="product__a"></a> 
                         <div></div>
                     </div>
                 </div>
